# drf-api-permissions-postgres

./: pyproject.toml
bookshop/: db.sqlite3
bookshop/books/: models.py  serializers.py  urls.py  views.py
bookshop/books/migrations/: 0001_initial.py
bookshop/bookshop/: settings.py  urls.py
